<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Here Post</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">TeenScribblers</string>
    <string name="slogan">post your location!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_100">100 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_1500">1500 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Here Post</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="title_activity_user_details">UserDetails</string>
    

</resources>